--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<iframe src="https://hcb.hackclub.com/donations/start/lgs-ukroc-team" style="border:none;" name="donateFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" height="100%" width="100%" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        
+        iframe {
+            display: block;
+            border: none;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            background-color: transparent;
+        }
+    </style>
+</head>
+<body>
+    <iframe 
+        name="donateFrame" 
+        scrolling="yes" 
+        frameborder="0" 
+        marginheight="0" 
+        marginwidth="0" 
+        allowfullscreen
+        src="https://hcb.hackclub.com/donations/start/lgs-ukroc-team">
+    </iframe>
+</body>
+</html>
