--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>
+      Give to LGS UKROC Team
+    </title>
     <style>
         html, body {
             margin: 0;
