--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>
       Give to LGS UKROC Team
     </title>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://hcb.hackclub.com/favicon-production-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://hcb.hackclub.com/favicon-production-32x32.png">
     <style>
         html, body {
             margin: 0;
